2016-01-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More accurate handling of Z80/Z180 I/O in peepholes.

2016-01-10 Ben Shi <powerstudio1st AT 163 DOT com>

        * src/mcs51/gen.c
          Fix a bug in genOr() when all operands are in registers.
        * support/regression/tests/bug-2448.c
          Add a new test case.

2016-01-09 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl,
	  support/optimize_pic16devices.pl,
	  support/z80-disasm.pl:
	  Some minor repairs.

	* device/include/pic14/pic14devices.txt,
	  device/include/pic14/pic16regs.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/pic18fregs.h,
	  device/lib/pic16/configure,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libio/adc.ignore,
	  device/lib/pic16/libio/i2c.ignore,
	  device/lib/pic16/libio/usart.ignore,
	  device/non-free/include/pic14/*.h,
	  device/non-free/include/pic16/*.h,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/*.c,
	  device/non-free/lib/pic16/Makefile.in,
	  device/non-free/lib/pic16/aclocal.m4,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/processors.ac,
	  device/non-free/lib/pic16/libdev/Makefile.am,
	  device/non-free/lib/pic16/libdev/Makefile.in,
	  device/non-free/lib/pic16/libdev/*.c,
	  doc/sdccman.lyx:
	  Updated to gputils-1.4.2-1

2016-01-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Optimize comparisons of cheap variables to expensive constants more.
	* src/SDCCast.c:
	  Use cheaper types for implicitly introduced constants.

2016-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c:
	  Do not try to output debug info in case of fatal errors - patch #260 by Peter Dons Tychsen
	* src/z80/gen.c,
	  support/regression/tests/bug-2452.c:
	  Fix gbz80 right shift bug #2452.

2016-01-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c