@@ -1,3 +1,13 @@
+2016-01-11 Ben Shi <powerstudio1st AT 163 DOT com>
+        * src/ds390/ralloc.c
+        * src/mcs51/ralloc.c
+          Improve positionRegs().
+        * src/mcs51/gen.c
+          Roll back to previous version.
+        * support/regression/tests/bug-2263.c
+        * support/regression/tests/bug-2403.c
+          Add new test cases.
+
 2016-01-10 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peep.c:
